fix: suppress EI_EXPOSE_REP on OrNode record, use List.copyOf